[tool.poetry]
name = "my-fetch"
version = "0.1.0"
description = "my personal presence script for discord"
authors = ["MannuVilasara <mannuvilasara@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypresence = "^4.3.0"
psutil = "^5.9.8"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
